# sequence-cpp

./: CMakeLists.txt
include/sequence/: builder.hpp  builder_posix.hpp  interfaces.hpp  sequence.hpp  sequence_posix.hpp
include/sequence-cpp/: builder.hpp  builder_posix.hpp  interfaces.hpp  sequence_posix.hpp
src/: builder.cpp  sequence.cpp
